--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
   </head>
   <body>
     <div class="container">
-        <h1>Hello, world!</h1>
+        <h1>Interval manager</h1>
+        <hr>
+        <form>
+            Liczba sesji: <input class="form-control" value="0" type="number" id="sessions">
+            Długość ćwiczenia: <input class="form-control" value="0" type="number" id="workout_time">
+            Długość przerwy: <input class="form-control" value="0" type="number" id="rest_time">
+            <a class="btn btn-primary">Rozpocznij</a>
+        </form>
     </div>
     <!-- /.container -->
 
