--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Your browser does not support the audio element.
     </audio>
     <div class="container">
-        <form>
+        <form autocomplete="off">
             <h1>Interval manager</h1>
             <hr>
             Liczba powtórzeń: <input class="form-control" value="0" type="number" id="sessions">
@@ -35,7 +35,11 @@
             <a class="btn btn-primary submit">Rozpocznij</a>
             <hr>
         </form>
-        <h2 id="timer"><span>0</span><small>sec</small></h2>
+        <div class="info">
+          <h3 data-bind="sessions"><strong>Workout:</strong><span>0/0</span></h3>
+          <h3 data-bind="time_left"><strong>Pozostało:</strong><span>0</span></h3>
+          <h2 id="timer"><span>0</span><small>sec</small></h2>
+        </div>
     </div>
     <!-- /.container -->
 
