--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <form autocomplete="off">
             <h1>Interval manager</h1>
             <hr>
-            Liczba powtórzeń: <input class="form-control" value="0" type="number" id="sessions">
+            Liczba powtórzeń: <input class="form-control" value="1" min=1 type="number" id="sessions">
             Długość ćwiczenia: <input class="form-control" value="0" type="number" id="workout_time">
             Długość przerwy: <input class="form-control" value="0" type="number" id="rest_time">
             <a class="btn btn-primary submit">Rozpocznij</a>
