--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <source src="audio/fight.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
+    <audio id="tensec">
+        <source src="audio/tensec.wav" type="audio/wav">
+        Your browser does not support the audio element.
+    </audio>
     <div class="container">
         <form autocomplete="off">
             <h1>Interval manager</h1>
